--- a/.gitignore
+++ b/.gitignore
@@ -478,6 +478,12 @@ $RECYCLE.BIN/
 
 # VS Code directories
 .vscode/
+.vs
+.git
+
+# JSON Files
+*appsettings.json
+*appsettings.Development.json
 
 # Windows Installer files
 *.cab
