--- a/ElementFactory/appsettings.json
+++ b/ElementFactory/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ElementFactory;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=ElementFactory;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ServerConnection": "Server=mssql6.asphostbg.net,14330;Database=srebchev_elementfactory;User Id=srebchev_teodor;Password=Teodorpatov19@;"
+
   },
   "Logging": {
     "LogLevel": {
