--- a/ElementFactory.Tests/ElementFactory.Tests.csproj
+++ b/ElementFactory.Tests/ElementFactory.Tests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Include="OpenAI" Version="1.11.0" />
   </ItemGroup>
 
   <ItemGroup>
