--- a/ElementFactory/appsettings.json
+++ b/ElementFactory/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=ElementFactory;Trusted_Connection=True;MultipleActiveResultSets=true",
     "ServerConnection": "Server=mssql6.asphostbg.net,14330;Database=srebchev_elementfactory;User Id=srebchev_teodor;Password=Teodorpatov19@;"
-
+    "API": ""
   },
   "Logging": {
     "LogLevel": {
