Finalization of project

--- a/ElementFactory/appsettings.json
+++ b/ElementFactory/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=ElementFactory;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ServerConnection": "Server=mssql6.asphostbg.net,14330;Database=srebchev_elementfactory;User Id=srebchev_teodor;Password=Teodorpatov19@;"
-    "API": ""
+    "ServerConnection": "Server=mssql6.asphostbg.net,14330;Database=srebchev_elementfactory;User Id=srebchev_teodor;Password=Teodorpatov19@;",
+    "API": "sk-proj-mreXDRQc87aMFh73I9QyT3BlbkFJkDzQeLqjStjjq0mjKTsL"
   },
   "Logging": {
     "LogLevel": {
